# simforge-agent-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
packaging/: simforge-agent.service
src/simforge_agent/: cli.py  client.py  config.py
src/simforge_agent/handlers/: gitlab_runner.py  health.py  helm.py  preflight.py  probe.py  rollout.py  shell.py
src/simforge_agent/handlers/tests/: test_gitlab_runner.py  test_health.py  test_helm.py  test_preflight.py  test_probe.py  test_rollout.py  test_shell.py
src/simforge_agent/tests/: test_cli.py  test_config.py  test_handshake_info.py  test_helm_timeout.py
