[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simforge-agent"
version = "1.0.0"
description = "Agent open-source de la plateforme SimDevForge — connexion sécurisée et exécution de tâches d'orchestration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SimBienvenueHoulBoumi" }]
keywords = ["devops", "kubernetes", "agent", "helm", "gitops", "simdevforge"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/SimBienvenueHoulBoumi/simforge-agent-cli"
Repository = "https://github.com/SimBienvenueHoulBoumi/simforge-agent-cli"
Issues = "https://github.com/SimBienvenueHoulBoumi/simforge-agent-cli/issues"

[project.scripts]
simforge-agent = "simforge_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simforge_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
